--- a/hiworth_construction/views/sequence.xml
+++ b/hiworth_construction/views/sequence.xml
@@ -2,7 +2,19 @@
 <openerp>
     <data>
     	
+        <record id="seq_type_grr" model="ir.sequence.type">
+            <field name="name">GRR Code</field>
+            <field name="code">grr.code</field>
+        </record>
 
+        <record id="grr_seq" model="ir.sequence">
+            <field name="name">GRR Code</field>
+            <field name="code">grr.code</field>
+            <field name="prefix">GRN/</field>
+            <field name="padding">3</field>
+              <field name="implementation">no_gap</field>
+            <field name="company_id" eval="False"/>
+        </record>
         <record id="seq_type_site_purchase" model="ir.sequence.type">
             <field name="name">Site Purchase</field>
             <field name="code">site.purchase</field>
